add header and footer

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,2 +1,14 @@
+<header class="jumbotron">
+  <center> <h1> Greg's General Store </h1> </center>
+  <hr>
+</header>
 
-{{outlet}}
+<div class="container">
+  {{outlet}}
+</div>
+
+<hr>
+
+<footer>
+  {{#link-to 'index'}} Go back to Inventory {{/link-to}}
+</footer>
