--- a/app/templates/components/listing-tile.hbs
+++ b/app/templates/components/listing-tile.hbs
@@ -1,1 +1,1 @@
-<li> {{#link-to 'listing' listing.id}} {{listing.name}} <br> <img src="{{listing.image}}"> {{/link-to}} </li>
+<li> <h2> {{#link-to 'listing' listing.id}} {{listing.name}} <br> <img src="{{listing.image}}"> {{/link-to}} </h2> </li>
