--- a/app/templates/listing.hbs
+++ b/app/templates/listing.hbs
@@ -1,2 +1,1 @@
-<h2> {{model.name}} <br> {{model.price}}</h2>
-{{listing-detail listing=model deleteListing="deleteListing"}}
+<center> {{listing-detail listing=model deleteListing="deleteListing"}} </center>
