--- a/app/templates/components/new-listing.hbs
+++ b/app/templates/components/new-listing.hbs
@@ -25,6 +25,8 @@
         <button {{action 'saveA'}}>save</button>
       </form>
     </div>
+    <button {{action 'listingFormHide'}}> Cancel </button>
+
   {{else}}
   <button {{action 'listingFormShow'}}> New Listing </button>
 {{/if}}
