--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
 <header class="jumbotron">
-  <center> <h1> Greg's General Store </h1> </center>
+  <center> <h1 class="fancyTitle"> Greg's General Store </h1> </center>
   <hr>
 </header>
 
