--- a/app/templates/components/listing-tile.hbs
+++ b/app/templates/components/listing-tile.hbs
@@ -1,1 +1,3 @@
-<li> <h3 class="names"> {{#link-to 'listing' listing.id}} <img src="{{listing.image}}"> <br> {{listing.name}}  {{/link-to}} </h3> </li>
+<li> <h3 class="names"> {{#link-to 'listing' listing.id}}
+  <img src="{{listing.image}}"> <br> {{listing.name}}  {{/link-to}}
+</h3> </li>
