add computed property for combining listing name with price

--- a/app/templates/components/listing-detail.hbs
+++ b/app/templates/components/listing-detail.hbs
@@ -9,7 +9,7 @@
 <br>
 
 <div class="nameFormat">
-  <p> {{listing.name}} </p>
+  <h2> {{listing.name}} </h2>
 </div>
 <br>
 <div class="descriptionFormat">
