--- a/app/templates/components/new-listing.hbs
+++ b/app/templates/components/new-listing.hbs
@@ -1,5 +1,5 @@
 {{#if addNewListing}}
-  <h1> New Listing </h1>
+  <center> <h1> New Listing </h1> </center>
     <div>
       <form>
         <div class="form-group">
