--- a/app/templates/listing.hbs
+++ b/app/templates/listing.hbs
@@ -1,6 +1,8 @@
 <center> {{listing-detail listing=model deleteListing="deleteListing"}} </center>
 
 {{new-review save2="save3" post=model}}
+{{update-listing update="update" listing=model}}
+
 
 <hr>
 <center> <h2> Reviews: </h2> </center>
