--- a/app/templates/components/new-review.hbs
+++ b/app/templates/components/new-review.hbs
@@ -1,6 +1,6 @@
 {{#if addNewReview}}
-  <h1> New Review </h1>
-    <div>
+  <center> <h1> New Review </h1> </center>
+    <center> <div>
       <form>
         <div class="form-group">
           <label for="author">Author </label>
@@ -20,8 +20,8 @@
         <button {{action 'save1'}}>Save </button>
         <button {{action 'cancel'}}>Cancel </button>
       </form>
-    </div>
+    </div> </center>
   {{else}}
   <br>
-  <center> <button {{action 'reviewFormShow'}}> New Review </button> </center>
+  <center> <button class="btn btn-success" {{action 'reviewFormShow'}}> New Review </button> </center>
 {{/if}}
