--- a/app/templates/components/review-tile.hbs
+++ b/app/templates/components/review-tile.hbs
@@ -1,3 +1,3 @@
 <h2 class="text"> {{review.text}} <br> -{{review.author}} <br><br> rating: {{review.rating}} </h2>
 
-<button {{action 'delete' review}}> Delete </button>
+<button class="btn btn-danger" {{action 'delete' review}}> Delete </button>
