--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,9 +1,9 @@
-<h3 class="border"> Popular item: <span class="glyphicon glyphicon-fire"></span> </h3> 
+<h3 class="border"> Popular item: <span class="glyphicon glyphicon-fire"></span> </h3>
 
 <center>  <ul>
     {{#each model.listings as |listing|}}
     <div class="col-md-4">
-      {{listing-tile listing=listing deleteListing="deleteListing"}}
+      {{listing-tile listing=listing deleteListing="deleteListing" update="update"}}
       {{review-popularity listing}}
       <br> <br>
     </div>
