--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,20 @@
 <header class="jumbotron">
   <center> <h1 class="fancyTitle"> Greg's General Store </h1> </center>
-  <hr>
+
+
+<div class="cart">
+  <center> <h2> Shopping Cart: </h2> </center>
+  {{display-cart}}
+</div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 </header>
 
 <div class="container">
