--- a/app/templates/components/listing-tile.hbs
+++ b/app/templates/components/listing-tile.hbs
@@ -1,5 +1,7 @@
-<li> <h3 class="names"> {{#link-to 'listing' listing.id}}
-  <img src="{{listing.image}}"> <br> {{namePrice}}  {{/link-to}}
-</h3> </li>
+<div class="backer">
+  <li> <h3 class="names"> {{#link-to 'listing' listing.id}}
+    <img src="{{listing.image}}"> <br> {{namePrice}}  {{/link-to}}
+  </h3> </li>
+</div>
 
 <button class="btn btn-success" {{action 'addToCart' listing}}> Add to Cart </button>
